--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">TutuInternship</string>
+    <string name="rationable">Чтобы приложение работало, нужно включить интренет. Включите интернет и обновите страницу</string>
 </resources>
