--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">TutuInternship</string>
     <string name="rationable">Чтобы приложение работало, нужно включить интренет. Включите интернет и обновите страницу</string>
     <string name="loading">Загрузка...</string>
+    <string name="internet_err">Нет соединения с интренетом. Данные могли устареть.</string>
 </resources>
